--- a/views/html/estilos1.css
+++ b/views/html/estilos1.css
@@ -11,8 +11,6 @@ body{
     background-color: black;
     width: 100vw;
     height:20vh;
-    margin-top: 0%;
-    left: 0%;
 
 }
 
@@ -35,16 +33,36 @@ a{
     font-size: 40px;
 
 }
-.button {
+#button {
     background-color: white;
     border: none;
     color: #fcc9a5;
-    font-size: 16px;
+    font-size: 25px;
+    width: 15vw;
+    margin-top: 15px;
+    position:absolute;
+    display: flex;
+    justify-content: center;
+}
+
+#button1{
+    background-color: white;
+    border: none;
+    color: #fcc9a5;
+    font-size: 25px;
+    width: 15vw;
+    margin-bottom: 30px;
+    position:absolute;
+    display: flex;
+    justify-content: center;
+
 }
 
 img{
     width: 50vw;
     height: 50vh;
+    display:flex;
+    justify-content: center;
 }
 
 
@@ -69,6 +87,7 @@ footer{
     align-self: flex-end;
     bottom: 0%;
     justify-content: space-around;
+    position: absolute;
 }
 
 
