--- a/views/html/estilos1.css
+++ b/views/html/estilos1.css
@@ -51,10 +51,10 @@ a{
     color: #fcc9a5;
     font-size: 25px;
     width: 15vw;
-    margin-bottom: 30px;
-    position:absolute;
+    position:relative;
     display: flex;
     justify-content: center;
+    align-self: flex-start;
 
 }
 
@@ -63,6 +63,7 @@ img{
     height: 50vh;
     display:flex;
     justify-content: center;
+    position: relative;
 }
 
 
